changed some spacing issues with home section

--- a/styles.css
+++ b/styles.css
@@ -277,7 +277,7 @@ a {
 
 /*=============== HOME ===============*/
 .home {
-  padding: 4rem 0 4rem;
+  padding: 4rem 0 2rem;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
